# FastChem

./: .buildinfo  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  branch_readme.txt  genindex.html  index.html  licence.md  make.global_options  makefile  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: documentation.yaml  gh-pages.yml  wheels.yml
_sources/: index.rst.txt
_sources/sections/: cpp_class.rst.txt  cpp_standalone.rst.txt  input_output.rst.txt  installation.rst.txt  overview.rst.txt  parameters.rst.txt  pyfastchem.rst.txt  python_module.rst.txt
demos_src/: demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  makefile  read_config.cpp
docs/: .buildinfo  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle
docs/.doctrees/sections/: cpp_class.doctree  cpp_standalone.doctree  input_output.doctree  installation.doctree  parameters.doctree  pyfastchem.doctree  python_module.doctree
docs/_sources/sections/: cpp_class.rst.txt  cpp_standalone.rst.txt  input_output.rst.txt  overview.rst.txt  pyfastchem.rst.txt  python_module.rst.txt
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/sections/: cpp_class.doctree  input_output.doctree  licence.doctree  overview.doctree  parameters.doctree  pyfastchem.doctree  python_module.doctree
docs/html/: genindex.html  index.html  searchindex.js
docs/html/_sources/sections/: input_output.rst.txt  licence.rst.txt  pyfastchem.rst.txt
docs/html/_static/: alabaster.css
docs/html/sections/: cpp_class.html  cpp_standalone.html  input_output.html  installation.html  licence.html  python_module.html
docs/sections/: cpp_class.html  input_output.html  overview.html  parameters.html  pyfastchem.html  python_module.html
docs_src/: conf.py  index.rst
docs_src/sections/: cpp_class.rst  installation.rst  parameters.rst  pyfastchem.rst  python_module.rst
docs_src/static/: custom.css
fastchem_src/: bisection.cpp  calc_densities.cpp  calc_densities_ph.cpp  calc_densities_private.cpp  calc_electron_densities.cpp  calc_mean_mol_weight.cpp  calc_species_densities.cpp  calc_total_h_density.cpp  check.cpp  chemical_element_data.h  fastchem.cpp  fastchem.h  fastchem_constants.h  fastchem_get_set.cpp  get.cpp  init.cpp  init_add_species.cpp  init_read_files.cpp  init_solver.cpp  initial_h_density.cpp  input_output_struct.h  mass_action_constant.cpp  options.cpp  options.h  options_read_files.cpp  set.cpp  solve_fastchem.cpp  solver.cpp  solver.h  solver_bisection.cpp  solver_coeff.cpp  solver_joint.cpp  solver_linsol_quadsol.cpp  solver_nelder_mead_electron.cpp  solver_nelder_mead_single.cpp  solver_newtsol.cpp  solver_scaling_factor.cpp  species_struct.cpp  species_struct.h
fastchem_src/condensed_phase/: add_condensate.cpp  calculate.cpp  condensate_struct.cpp  condensate_struct.h  condensed_phase.cpp  condensed_phase.h  read_condensate_data.cpp  solver.cpp  solver.h
fastchem_src/elements/: chemical_element_data.h  element_struct.cpp  elements.cpp  elements.h  read_files.cpp
fastchem_src/gas_phase/: calc_electron_densities.cpp  calc_mean_mol_weight.cpp  calc_species_densities.cpp  calculate.cpp  gas_phase.cpp  gas_phase.h  init_read_files.cpp  init_solver.cpp  molecule_struct.cpp  solver.cpp  solver.h  solver_bisection.cpp  solver_coeff.cpp  solver_linsol_quadsol.cpp  solver_nelder_mead_electron.cpp  solver_newtsol.cpp  solver_newtsol_mult.cpp
input/: README.TXT  add_functions.py  config.input  config_disk.input  config_grid.input  config_grid_single.input  config_paper1.input  config_paper4_test.input  config_soot_factory_3.0_2.5.input  create_custom_network.py
input/element_abundances/: README.TXT  abundance_3.0_2.5.txt
input/logK/: README.TXT
manual/: fastchem_manual.tex
manual/aux/: config.input  fcmanual.cls  references.bib
manual_src/: fastchem_manual.tex
manual_src/code/: config.input
model_main/: model_main.cpp  read_config.h
model_src/: model_main.cpp  read_config.h  save_output.h
output_benchmarks/: README.TXT
output_benchmarks/Brown_dwarf_Sonora/: README.TXT
output_benchmarks/L5_dwarf_Sonora/: README.TXT
python/: README.TXT  fastchem.py  fastchem_api_examples.py  fastchem_c_o.py  fastchem_cond.py  fastchem_cond1.py  fastchem_cond_disk.py  fastchem_cond_rosseland.py  fastchem_metallicity.py  fastchem_new.py  fastchem_python_wrapper.cpp  fastchem_test.py  fastchem_test_rainout.py  save_output.py
sections/: cpp_class.html  cpp_standalone.html  input_output.html  installation.html  licence.html  overview.html  parameters.html  pyfastchem.html  python_module.html
workflow/: documentation.yaml
